--- a/WonInfo/app/src/main/res/values/strings.xml
+++ b/WonInfo/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_search">Search</string>
+    <string name="action_edit">Edit</string>
+    <string name="action_menu">Menu</string>
 
     <string name="SETTING_FILENAME">Setting File Name</string>
     <string name="TUTORIAL_START">Tutorial Start</string>
